src/objects/Exception_Log__c.object
<CustomObject>
    <description>This Object is used to store all exception that we are getting while doing any operations. The solo propose is to track the error and Generate a report.</description>
    <fields>
        <fullName>Error_Initial_Cause__c</fullName>
        <label>Error Initial Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This will track the error Message came during exception handling</description>
        <inlineHelpText>Error Occurred(Message)</inlineHelpText>
        <label>Error Message</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <description>Stores which type of error occurred during the transaction</description>
        <externalId>true</externalId>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_User__c</fullName>
        <label>Recipient User</label>
        <type>Email</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ExceptonNo-{0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>